--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						SULAV PAUDEL, PhD</h1>
+						<p>As a Senior Scientist at AgResearch New Zealand with over 10 years of expertise in entomology and international agriculture, I lead projects on pest management and surveillance in the South Pacific, 
+							specializing in invasive insects and pest risk analysis for New Zealand forage crops.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
